--- a/dropboxLoader/uploader/dropboxService.conf
+++ b/dropboxLoader/uploader/dropboxService.conf
@@ -16,7 +16,7 @@ script
     NODEDIR="/var/www/dropboxloader"
     cd $NODEDIR
     echo "Starting dropbox uploader using ubuntu upstart" > $NODEDIR/access.log
-    sudo node index.js > $NODEDIR/access.log 2> $NODEDIR/error.log
+    sudo nodejs index.js > $NODEDIR/access.log 2> $NODEDIR/error.log
 end script
 
 post-stop script
